fix small srn ver pictures under titles, need fix alignement

--- a/style.css
+++ b/style.css
@@ -22,7 +22,19 @@ img {
 	margin: -7px auto !important;
 }
 
-
+/*.row-eq-height{
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+}*/
+.row-eq-height [class*="col-"]{
+  padding: 0;
+}
+.row-eq-height img{
+  width: 100%;
+}
 
 .pics_hover {
 	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Microsoft Edge and Firefox 35+ */
